--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
 					<h3>Illastrator</p></h3>
 					<div class="flex">
 						<div>
-							<img src="../作品/Illustrator/sale.jpg" alt="saleバナー">
+							<img src="作品/Illustrator/sale.jpg" alt="saleバナー">
 							<p>商品のSaleバナー</p>
 						</div>
 						<div>
-							<img src="../作品/Illustrator/sakura.jpg"alt="桜のはなびら">
+							<img src="作品/Illustrator/sakura.jpg"alt="桜のはなびら">
 							<p>グラデーション、ブラシツール使用</p>
 						</div>
 					</div>
 						<h3>Photoshop</h3>
 					<div class="flex">
 						<div>
-							<img src="../作品/Photoshop/coffee.png"alt="coffee.png">
+							<img src="作品/Photoshop/coffee.png"alt="coffee.png">
 							<p>クリッピングマスク、効果</p>
 						</div>
 						<div>
-							<img src="../作品/Photoshop/ドーナツ.png"alt="coffee.png">
+							<img src="作品/Photoshop/ドーナツ.png"alt="coffee.png">
 							<p>販売告知バナー</p>
 						</div>
 					</div>
