--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<header>
 		<main>
 		<h1>大河内　一磨(Kazuma Okochi)</h1>
-			<h2 id="profileh2">Portfolio</h2>
+			<h2 id="profileh2">Profile</h2>
 				<div id="profile">
 					<img src="images/プロフィール写真.jpg" alt="プロフィール写真">
 					<p>　1997年11月21日生まれ和歌山育ち（27歳）。趣味はカフェ巡り、旅行、体を動かすことです。新しい技術や知識に興味があり、積極的に取り入れることができると自負しています。Web業界は常に進化しており、新しい技術やトレンドを取り入れ、常に新しいことに挑戦できる機会があり、職業訓練でHTML/CSS/Photoshop/Illastratorを習得しています。</p>
