--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<h1>大河内　一磨(Kazuma Okochi)</h1>
 			<h2 id="profileh2">Profile</h2>
 				<div id="profile">
-					<img src="images/プロフィール写真.jpg" alt="プロフィール写真">
+					<img src="images/profile.jpg" alt="プロフィール写真">
 					<p>　1997年11月21日生まれ和歌山育ち（27歳）。趣味はカフェ巡り、旅行、体を動かすことです。新しい技術や知識に興味があり、積極的に取り入れることができると自負しています。Web業界は常に進化しており、新しい技術やトレンドを取り入れ、常に新しいことに挑戦できる機会があり、職業訓練でHTML/CSS/Photoshop/Illastratorを習得しています。</p>
 				</div>
 			<h2 id="workh2">Work</h2>
@@ -42,22 +42,26 @@
 					<h3>Illastrator</p></h3>
 					<div class="flex">
 						<div>
-							<img src="作品/Illustrator/sale.jpg" alt="saleバナー">
+							<img src="work/Illustrator/sale.jpg" alt="saleバナー">
 							<p>商品のSaleバナー</p>
 						</div>
 						<div>
-							<img src="作品/Illustrator/sakura.jpg"alt="桜のはなびら">
+							<img src="work/Illustrator/sakura.jpg"alt="桜のはなびら">
 							<p>グラデーション、ブラシツール使用</p>
+						</div>
+						<div>
+							<img src="work/Illustrator/flyer.jpg"alt="チラシ">
+							<p>クリッピングマスク<br>シンプルにわかりやすく</p>
 						</div>
 					</div>
 						<h3>Photoshop</h3>
 					<div class="flex">
 						<div>
-							<img src="作品/Photoshop/coffee.png"alt="coffee.png">
+							<img src="work/Photoshop/coffee.png"alt="coffee.png">
 							<p>クリッピングマスク、効果</p>
 						</div>
 						<div>
-							<img src="作品/Photoshop/ドーナツ.png"alt="coffee.png">
+							<img src="work/Photoshop/ドーナツ.png"alt="coffee.png">
 							<p>販売告知バナー</p>
 						</div>
 					</div>
@@ -73,22 +77,29 @@
 						<p>Illustratorクリエイター能力認定試験 エキスパート</p>
 					</div>
 					<div>
-						<img src="images/typingskills.jpg" alt="typingskills">
-						<p>10分間に1000文字以上文章入力可能</p>
+						<p>Illustratorクリエイター能力認定試験 エキスパート<br>バッジ発行待ち</p>
+						<!--<img src="images/" alt="Illustratorバッジ">
+						<p>Illustratorクリエイター能力認定試験 エキスパート</p>-->
 					</div>
 				</div>
 				<div id="skill">
 					<div>
-						<img src="images/powerpoint.jpg" alt="powerpoint">
-						<p>アニメーションや音楽の設定を使用したスライド作成</p>
+						<img src="images/powerpoint.png" alt="powerpoint">
+						<p>アニメーションや音楽の設定を<br>使用したスライド作成</p>
 					</div>
 					<div>
-						<img src="images/excel.jpg" alt="excel">
-						<p>各種関数、グラフ、ピポットテーブルなどを使用しデータ分析</p>
+						<img src="images/excel.png" alt="excel">
+						<p>各種関数、グラフ、ピポットテーブルなど<br>を使用しデータ分析</p>
 					</div>
 					<div>
-						<img src="images/word.jpg" alt="word">
-						<p>ビジネス文書、差し込み印刷など作成</p>
+						<img src="images/word.png" alt="word">
+						<p>ビジネス文書<br>差し込み印刷など作成</p>
+					</div>
+				</div>
+				<div id="skill">
+					<div>
+						<img src="images/typingskills.png" alt="typingskills">
+						<p>10分間に1000文字以上文章入力可能</p>
 					</div>
 				</div>
 			<div class="contact">
