--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 						<p>Illustratorクリエイター能力認定試験 エキスパート</p>
 					</div>
 					<div>
-						<p>Illustratorクリエイター能力認定試験 エキスパート<br>バッジ発行待ち</p>
-						<!--<img src="images/" alt="Illustratorバッジ">
-						<p>Illustratorクリエイター能力認定試験 エキスパート</p>-->
+						<img src="images/Illustrator.png" alt="Illustratorバッジ">
+						<p>Illustratorクリエイター能力認定試験 エキスパート</p>
 					</div>
 				</div>
 				<div id="skill">
